fixed spacing issue in smaller screens

--- a/styles/smallscreen.css
+++ b/styles/smallscreen.css
@@ -147,7 +147,7 @@ body,html{
 }
 
 #intro_name{
-    font-size: 45px;
+    font-size: 43px;
     font-family: 'Righteous', cursive;
     font-weight: bold;
     /* background: -webkit-linear-gradient(#03001e, #7303c0, #f64f59, #fdeff9 ); */
